package NYT.NYson.NProto;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions
{
    optional string field_name = 3000;
    optional bool yson_string = 3001;
}

extend google.protobuf.EnumValueOptions
{
    optional string enum_value_name = 3001;
}

extend google.protobuf.MessageOptions
{
    optional bool attribute_dictionary = 3000;
}

extend google.protobuf.FileOptions
{
    optional bool derive_underscore_case_names = 3000;
}
